WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
74745
<!doctype html><div><body><frameset> doesn't parse correctly
https://bugs.webkit.org/show_bug.cgi?id=74745
Summary
<!doctype html><div><body><frameset> doesn't parse correctly
Adam Barth
Reported
2011-12-16 13:52:59 PST
<!doctype html><div><body><frameset> doesn't parse correctly
Attachments
Patch
(2.39 KB, patch)
2011-12-16 13:54 PST
,
Adam Barth
eric
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Adam Barth
Comment 1
2011-12-16 13:54:11 PST
Created
attachment 119664
[details]
Patch
Eric Seidel (no email)
Comment 2
2011-12-16 13:54:44 PST
Comment on
attachment 119664
[details]
Patch LOVE IT.
Adam Barth
Comment 3
2011-12-16 14:29:07 PST
Committed
r103109
: <
http://trac.webkit.org/changeset/103109
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug